test class rename and return 400 when compatible header not present